--- a/유기태/package.json
+++ b/유기태/package.json
@@ -14,6 +14,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.10",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.3.2"
   }
 }
