--- a/유기태/package.json
+++ b/유기태/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.0.10",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.14",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "url": "^0.11.0"
   }
 }
